# Whac-a-mole

./: .gitignore  README.md
game_client/: CMakeLists.txt  gameboard.cpp  gameboard.h  gameboard.ui  main.cpp  menuwindow.cpp  menuwindow.h  menuwindow.ui  mygame.cpp  mygame.h  mygame.ui
game_server/: CMakeLists.txt  config.txt  game_server.cpp
